--- a/try1video/index.html
+++ b/try1video/index.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
+  <div class="intro">
+    <h1>Introduction</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+      voluptates, quibusdam, quia, voluptatum voluptate quos quod quae
+      voluptatibus doloribus quas natus. Quisquam voluptates, quibusdam, quia,
+      voluptatum voluptate quos quod quae voluptatibus doloribus quas natus.
+    </p>
+  </div>
     <div class="video">
       <iframe
         width="560"
