--- a/media query responsiveness/index.html
+++ b/media query responsiveness/index.html
@@ -15,6 +15,7 @@
         }
       }
 
+      /* majorly this is used for responsive design */
       @media only screen and (max-width: 455px) {
         body {
           background-color: blue;
